--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2193,7 +2193,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "01b83c5b",
+   "id": "031b3188",
    "metadata": {},
    "outputs": [
     {
@@ -2219,7 +2219,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "abf93213",
+   "id": "0eda9d02",
    "metadata": {},
    "outputs": [
     {
@@ -2290,7 +2290,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f18a297d",
+   "id": "0ecf1015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2309,7 +2309,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e6a96d7c",
+   "id": "068dd7b1",
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e1fee496",
+   "id": "5db200ae",
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2423,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0c4746e9",
+   "id": "14d37f85",
    "metadata": {},
    "outputs": [
     {
@@ -2553,7 +2553,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "99cbcdc1",
+   "id": "d58d504f",
    "metadata": {},
    "outputs": [
     {
@@ -2591,7 +2591,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "72423e34",
+   "id": "ad945d76",
    "metadata": {},
    "outputs": [
     {
@@ -2630,7 +2630,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "08a3b006",
+   "id": "c8225d31",
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2668,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "539ce019",
+   "id": "cccfe002",
    "metadata": {},
    "outputs": [
     {
@@ -2707,7 +2707,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3c9079d1",
+   "id": "ea4ed0a6",
    "metadata": {},
    "outputs": [
     {
@@ -2745,7 +2745,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9af778c2",
+   "id": "76cee3f3",
    "metadata": {},
    "outputs": [
     {
@@ -2780,7 +2780,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2d5af776",
+   "id": "a2685454",
    "metadata": {},
    "outputs": [
     {
@@ -3013,7 +3013,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "be1f4e93",
+   "id": "769aedf2",
    "metadata": {},
    "outputs": [
     {
@@ -3054,7 +3054,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b2763e9d",
+   "id": "215ecb12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3067,7 +3067,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1ce16346",
+   "id": "b03f31eb",
    "metadata": {},
    "outputs": [
     {
@@ -3207,7 +3207,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9a6d26eb",
+   "id": "653bc27c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3220,7 +3220,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "6f49c62e",
+   "id": "052a160b",
    "metadata": {},
    "outputs": [
     {
@@ -3257,7 +3257,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "358516df",
+   "id": "fb8ba3e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3270,7 +3270,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "9abbed78",
+   "id": "c2384702",
    "metadata": {},
    "outputs": [
     {
@@ -3306,7 +3306,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c3aad032",
+   "id": "08935a8c",
    "metadata": {},
    "outputs": [
     {
@@ -3449,7 +3449,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b756e80b",
+   "id": "f5c8b694",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3460,7 +3460,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "29ffa5e2",
+   "id": "b005fc1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3471,7 +3471,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2f1e1b65",
+   "id": "2bd1c1c5",
    "metadata": {},
    "outputs": [
     {
@@ -3507,7 +3507,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "3263c2dd",
+   "id": "bcf1a8a3",
    "metadata": {},
    "outputs": [
     {
@@ -3661,7 +3661,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a2d831bb",
+   "id": "89649955",
    "metadata": {},
    "outputs": [
     {
@@ -3810,7 +3810,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ce3c86d3",
+   "id": "8c4d8802",
    "metadata": {},
    "outputs": [
     {
@@ -3957,8 +3957,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "id": "eb7472c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a30def18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "788a4ed7",
+   "id": "a96f8e22",
    "metadata": {},
    "outputs": [],
    "source": []
