--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4265,7 +4265,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c2112934",
+   "id": "595093df",
    "metadata": {},
    "outputs": [
     {
@@ -4405,7 +4405,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "46a6731d",
+   "id": "378ce85f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4422,7 +4422,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f270feaf",
+   "id": "21b09e51",
    "metadata": {},
    "outputs": [
     {
@@ -4449,7 +4449,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "03dda0d0",
+   "id": "1b2d6fe8",
    "metadata": {},
    "outputs": [
     {
@@ -4486,7 +4486,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2d6ff21b",
+   "id": "3a488b84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4503,7 +4503,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "98452cdc",
+   "id": "651a5603",
    "metadata": {},
    "outputs": [
     {
@@ -4530,7 +4530,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4bea81a6",
+   "id": "452baef6",
    "metadata": {},
    "outputs": [
     {
@@ -4567,7 +4567,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "cd3966c3",
+   "id": "8678b201",
    "metadata": {},
    "outputs": [
     {
@@ -4673,7 +4673,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "da71c901",
+   "id": "4b4748db",
    "metadata": {},
    "outputs": [
     {
@@ -4779,7 +4779,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "bec0481d",
+   "id": "e101d62d",
    "metadata": {},
    "outputs": [
     {
@@ -4886,7 +4886,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "a8440cbb",
+   "id": "b936e8df",
    "metadata": {},
    "outputs": [
     {
@@ -4993,7 +4993,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "c7f5c998",
+   "id": "79d3f8b4",
    "metadata": {},
    "outputs": [
     {
@@ -5023,7 +5023,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "1758966b",
+   "id": "1681e54c",
    "metadata": {},
    "outputs": [
     {
@@ -5062,7 +5062,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "fc7c560d",
+   "id": "bf19d4ca",
    "metadata": {},
    "outputs": [
     {
@@ -5101,7 +5101,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6d82d053",
+   "id": "97586e6b",
    "metadata": {},
    "outputs": [
     {
@@ -5128,7 +5128,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "0eb424be",
+   "id": "5c6922bc",
    "metadata": {},
    "outputs": [
     {
@@ -5155,7 +5155,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "df49ff09",
+   "id": "1f5cbe05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5167,7 +5167,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "8c6aa675",
+   "id": "b4cf7422",
    "metadata": {},
    "outputs": [
     {
@@ -5505,7 +5505,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "20ff1ab5",
+   "id": "b6a3e681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5524,7 +5524,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "36461f92",
+   "id": "d8b35aa5",
    "metadata": {},
    "outputs": [
     {
@@ -5545,7 +5545,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "e7f480f9",
+   "id": "2a5fce5d",
    "metadata": {},
    "outputs": [
     {
@@ -5664,7 +5664,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "9e68b468",
+   "id": "01fb7247",
    "metadata": {},
    "outputs": [
     {
@@ -5785,8 +5785,203 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "id": "438cd1e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish the bins.\n",
+    "size_bins = [0, 999, 1999, 5000]\n",
+    "group_names = [\"Small (<1000)\", \"Medium (1000-1999)\", \"Large (2000-5000)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "20f6667f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th>School Size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>$628.00</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "      <td>66.680064</td>\n",
+       "      <td>81.933280</td>\n",
+       "      <td>54.642283</td>\n",
+       "      <td>$586-630</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "      <td>&lt;$586</td>\n",
+       "      <td>Medium (1000-1999)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "      <td>$631-645</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
+       "      <td>77.102592</td>\n",
+       "      <td>80.746258</td>\n",
+       "      <td>68.309602</td>\n",
+       "      <td>79.299014</td>\n",
+       "      <td>54.289887</td>\n",
+       "      <td>$631-645</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "      <td>$586-630</td>\n",
+       "      <td>Medium (1000-1999)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     School Type  Total Students Total School Budget  \\\n",
+       "Bailey High School      District            4976       $3,124,928.00   \n",
+       "Cabrera High School      Charter            1858       $1,081,356.00   \n",
+       "Figueroa High School    District            2949       $1,884,411.00   \n",
+       "Ford High School        District            2739       $1,763,916.00   \n",
+       "Griffin High School      Charter            1468         $917,500.00   \n",
+       "\n",
+       "                     Per Student Budget  Average Math Score  \\\n",
+       "Bailey High School              $628.00           77.048432   \n",
+       "Cabrera High School             $582.00           83.061895   \n",
+       "Figueroa High School            $639.00           76.711767   \n",
+       "Ford High School                $644.00           77.102592   \n",
+       "Griffin High School             $625.00           83.351499   \n",
+       "\n",
+       "                      Average Reading Score  % Passing Math  \\\n",
+       "Bailey High School                81.033963       66.680064   \n",
+       "Cabrera High School               83.975780       94.133477   \n",
+       "Figueroa High School              81.158020       65.988471   \n",
+       "Ford High School                  80.746258       68.309602   \n",
+       "Griffin High School               83.816757       93.392371   \n",
+       "\n",
+       "                      % Passing Reading  % Overall Passing  \\\n",
+       "Bailey High School            81.933280          54.642283   \n",
+       "Cabrera High School           97.039828          91.334769   \n",
+       "Figueroa High School          80.739234          53.204476   \n",
+       "Ford High School              79.299014          54.289887   \n",
+       "Griffin High School           97.138965          90.599455   \n",
+       "\n",
+       "                     Spending Ranges (Per Student)         School Size  \n",
+       "Bailey High School                        $586-630   Large (2000-5000)  \n",
+       "Cabrera High School                          <$586  Medium (1000-1999)  \n",
+       "Figueroa High School                      $631-645   Large (2000-5000)  \n",
+       "Ford High School                          $631-645   Large (2000-5000)  \n",
+       "Griffin High School                       $586-630  Medium (1000-1999)  "
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Categorize spending based on the bins.\n",
+    "per_school_summary_df[\"School Size\"] = pd.cut(per_school_summary_df[\"Total Students\"], size_bins, labels=group_names)\n",
+    "\n",
+    "per_school_summary_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "36983e0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "size_math_scores = per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "size_reading_scores = per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "size_passing_math = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "size_passing_reading = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "size_overall_passing = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d7986aeb",
+   "id": "2a657412",
    "metadata": {},
    "outputs": [],
    "source": []
