--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4265,7 +4265,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6f09f5cd",
+   "id": "eb87d82d",
    "metadata": {},
    "outputs": [
     {
@@ -4405,7 +4405,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "21d4b2a6",
+   "id": "c58fed48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4422,7 +4422,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "3e410070",
+   "id": "dd72cd22",
    "metadata": {},
    "outputs": [
     {
@@ -4449,7 +4449,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "dbbad1db",
+   "id": "854a0c81",
    "metadata": {},
    "outputs": [
     {
@@ -4486,7 +4486,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d077f6e0",
+   "id": "b16b914f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4503,7 +4503,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "79639385",
+   "id": "2a32e762",
    "metadata": {},
    "outputs": [
     {
@@ -4530,7 +4530,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "76378652",
+   "id": "6f0f529a",
    "metadata": {},
    "outputs": [
     {
@@ -4567,7 +4567,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "4ae6b4d8",
+   "id": "7b302d28",
    "metadata": {},
    "outputs": [
     {
@@ -4673,7 +4673,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "bc46e6b4",
+   "id": "d7d9c757",
    "metadata": {},
    "outputs": [
     {
@@ -4779,7 +4779,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "081b4166",
+   "id": "301b4b36",
    "metadata": {},
    "outputs": [
     {
@@ -4886,7 +4886,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "89e7a494",
+   "id": "28c100da",
    "metadata": {},
    "outputs": [
     {
@@ -4993,7 +4993,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "0d9b70bf",
+   "id": "82f264ef",
    "metadata": {},
    "outputs": [
     {
@@ -5023,7 +5023,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8735ccbe",
+   "id": "3bb912a7",
    "metadata": {},
    "outputs": [
     {
@@ -5062,7 +5062,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "01df5510",
+   "id": "80a7e2cb",
    "metadata": {},
    "outputs": [
     {
@@ -5101,7 +5101,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "c73488c9",
+   "id": "dec1e1bd",
    "metadata": {},
    "outputs": [
     {
@@ -5128,7 +5128,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "28d18fa5",
+   "id": "a48e29b8",
    "metadata": {},
    "outputs": [
     {
@@ -5155,7 +5155,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "c3544312",
+   "id": "d86666c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5167,7 +5167,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "ee83f6fa",
+   "id": "3183d5cf",
    "metadata": {},
    "outputs": [
     {
@@ -5505,7 +5505,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "ed00440f",
+   "id": "1698bcda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5524,7 +5524,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "cae155bb",
+   "id": "7396db76",
    "metadata": {},
    "outputs": [
     {
@@ -5545,7 +5545,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6f701549",
+   "id": "3ef5c4eb",
    "metadata": {},
    "outputs": [
     {
@@ -5664,7 +5664,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "728f2dce",
+   "id": "b5e09436",
    "metadata": {},
    "outputs": [
     {
@@ -5786,7 +5786,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "c69b236f",
+   "id": "75ebc4fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5798,7 +5798,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "e9e05e03",
+   "id": "68caf5c9",
    "metadata": {},
    "outputs": [
     {
@@ -5962,7 +5962,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "93fb081f",
+   "id": "2f1d2c43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5981,7 +5981,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "3097c8c1",
+   "id": "67f33c87",
    "metadata": {},
    "outputs": [
     {
@@ -6083,7 +6083,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "3dd33a73",
+   "id": "8d64672f",
    "metadata": {},
    "outputs": [
     {
@@ -6188,7 +6188,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "df8d6995",
+   "id": "9f2259b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6206,8 +6206,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "id": "cb37e9e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "904c05c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e972574c",
+   "id": "ccd555be",
    "metadata": {},
    "outputs": [],
    "source": []
