--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -4399,8 +4399,7 @@
    ],
    "source": [
     "# Calculate the total budget.\n",
-    "total_budget = school_data_df[\"budget\"].sum()\n",
-    "total_budget"
+    "total_budget = school_data_df[\"budget\"].sum()"
    ]
   },
   {
