--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -4384,7 +4384,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "0cac65c7",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
